# gh-lens

./: Cargo.toml  README.md  justfile
.github/workflows/: ci.yml
src/: daterange.rs  github.rs  main.rs
src/github/: client.rs  gql.rs  issue.rs  issues.rs  issues_summary.rs  pull_request.rs  pull_requests.rs  pull_requests_summary.rs
src/github/client/: client.rs  pull_request.rs  pull_requests.rs
src/github/gql/: issues_query.graphql  issues_query.rs  pull_requests_query.graphql  query.rs  scaler.rs
