[package]
name = "gh-lens"
authors = ["hirokisan <dev@hirokiueno.com>"]
description = "CLI to analyze your activity on GitHub"
version = "0.0.12"
edition = "2021"
license = "MIT"
keywords = ["github", "cli", "analysis", "gh-lens"]
categories = ["command-line-utilities"]
homepage = "https://github.com/hirokisan/gh-lens"
repository = "https://github.com/hirokisan/gh-lens"
readme = "README.md"
rust-version = "1.79.0"

[[bin]]
name = "gh-lens"

[dependencies]
anyhow = "1.0.93"
chrono = "0.4.38"
clap = { version = "4.5.21", features = ["derive"] }
graphql_client = "0.14.0"
octocrab = "0.41.2"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
tokio = { version = "1.41.1", features = ["full"] }
